pangolin.ebnf
program             = { statement }
                    ;

statement           = assignment
                    | expression
                    | if_statement
                    ;

if_statement        = "if" "(" expression ")" block { "else" "if" "(" expression ")" block } [ "else" block ]
                    ;

block               = "{" { statement } "}"
                    ;

assignment          = "let" identifier "=" expression
                    ;

expression          = bitwise_or_expr
                    ;

comparison_expr     = bitwise_or_expr [ comparison_op bitwise_or_expr ]
                    ;

comparison_op       = "<" | ">" | "==" | "!=" | "<=" | ">="
                    ;

bitwise_or_expr     = bitwise_xor_expr { "|" bitwise_xor_expr }
                    ;

bitwise_xor_expr    = bitwise_and_expr { "^" bitwise_and_expr }
                    ;

bitwise_and_expr    = additive_expr { "&" additive_expr }
                    ;

additive_expr       = multiplicative_expr { ( "+" | "-" ) multiplicative_expr }
                    ;

multiplicative_expr = unary_expr { ( "*" | "/" | "%" ) unary_expr }
                    ;

unary_expr          = [ "~" | "-" ] primary
                    ;

primary_expr        = integer 
                    | identifier 
                    | "(" expression ")"
                    ;

identifier          = letter { letter | digit | "_" }
                    ;

integer             = digit { digit }
                    ;

letter              = "a" | ... | "z"
                    | "A" | ... | "Z"
	                ;

digit               = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
                    ;
